feat: 홈탭에서 뒤로가기 두 번시 앱 종료

--- a/android/app/src/main/res/navigation/navigation_main.xml
+++ b/android/app/src/main/res/navigation/navigation_main.xml
@@ -4,6 +4,16 @@
     android:id="@+id/navigation_graph"
     app:startDestination="@id/myPageFragment">
 
+    <action
+        android:id="@+id/action_home_fragment"
+        app:destination="@id/myPageFragment"
+        app:enterAnim="@anim/nav_default_enter_anim"
+        app:exitAnim="@anim/nav_default_exit_anim"
+        app:popEnterAnim="@anim/nav_default_enter_anim"
+        app:popExitAnim="@anim/nav_default_pop_exit_anim"
+        app:popUpTo="@id/navigation_graph"
+        app:popUpToInclusive="true" />
+
     <fragment
         android:id="@+id/myPageFragment"
         android:name="com.woowacourse.friendogly.presentation.ui.mypage.MyPageFragment"
