--- a/android/app/src/main/res/navigation/navigation_main.xml
+++ b/android/app/src/main/res/navigation/navigation_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_graph"
     app:startDestination="@id/myPageFragment">
 
@@ -17,7 +18,8 @@
     <fragment
         android:id="@+id/myPageFragment"
         android:name="com.woowacourse.friendogly.presentation.ui.mypage.MyPageFragment"
-        android:label="MyPageFragment">
+        android:label="MyPageFragment"
+        tools:layout="@layout/fragment_my_page">
 
     </fragment>
 
