--- a/android/app/src/main/res/layout/activity_register.xml
+++ b/android/app/src/main/res/layout/activity_register.xml
@@ -39,6 +39,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="24dp"
             android:adjustViewBounds="true"
+            android:onClick="@{() -> vm.executeKakaoLogin()}"
             android:padding="0dp"
             android:scaleType="fitCenter"
             android:src="@drawable/img_kakao_register"
@@ -55,6 +56,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="24dp"
             android:adjustViewBounds="true"
+            android:onClick="@{() -> vm.executeGoogleLogin()}"
             android:padding="0dp"
             android:scaleType="fitCenter"
             android:src="@drawable/img_google_register"
