feat: viewModel init후 연결

--- a/android/app/src/main/res/layout/fragment_group_detail.xml
+++ b/android/app/src/main/res/layout/fragment_group_detail.xml
@@ -5,7 +5,9 @@
     tools:context=".presentation.ui.grouplist.detail.GroupDetailFragment">
 
     <data>
-
+        <variable
+            name="vm"
+            type="com.woowacourse.friendogly.presentation.ui.grouplist.detail.GroupDetailViewModel" />
     </data>
 
     <ScrollView
