feat: viewModel 연결

--- a/android/app/src/main/res/layout/fragment_group_list.xml
+++ b/android/app/src/main/res/layout/fragment_group_list.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="vm"
-            type="com.woowacourse.friendogly.presentation.ui.group." />
+            type="com.woowacourse.friendogly.presentation.ui.group.list.GroupListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
