--- a/android/app/src/main/res/layout/fragment_group_detail.xml
+++ b/android/app/src/main/res/layout/fragment_group_detail.xml
@@ -95,7 +95,7 @@
                 <Space
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1f" />
+                    android:layout_weight="1" />
 
                 <TextView
                     android:layout_width="wrap_content"
