--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -216,4 +216,21 @@
         <item name="fontFamily">@font/noto_sans_kr_regular</item>
     </style>
 
+
+    <!--Profile Edit Text-->
+    <style name="Theme.AppCompat.TextView.Profile.EditText.Contents" parent="@style/Widget.AppCompat.EditText">
+        <item name="android:textSize">16dp</item>
+        <item name="fontFamily">@font/noto_sans_kr_regular</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="android:paddingTop">14dp</item>
+        <item name="android:paddingBottom">14dp</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="maxLines">1</item>
+    </style>
+
 </resources>
