feat: 프로필 설정 UI 구현

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="gray03">#EEEEEE</color>
     <color name="gray02">#F5F5F5</color>
     <color name="gray01">#FAFAFA</color>
+    
+    <color name="blue">#8AABFF</color>
 </resources>
