--- a/android/app/src/main/res/layout/activity_profile_setting.xml
+++ b/android/app/src/main/res/layout/activity_profile_setting.xml
@@ -48,6 +48,7 @@
                     android:id="@+id/iv_user_profile_edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    app:glideProfile1000="@{vm.uiState.profileImage}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
