--- a/android/app/src/main/res/layout/fragment_group_list.xml
+++ b/android/app/src/main/res/layout/fragment_group_list.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent">
 
         <View
-            android:id="@+id/group_top_bar"
+            android:id="@+id/view_group_list_top_bar"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             app:layout_constraintTop_toTopOf="parent" />
@@ -25,9 +25,9 @@
             android:layout_marginStart="16dp"
             android:gravity="center"
             android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="@id/group_top_bar"
-            app:layout_constraintStart_toStartOf="@id/group_top_bar"
-            app:layout_constraintTop_toTopOf="@id/group_top_bar">
+            app:layout_constraintBottom_toBottomOf="@id/view_group_list_top_bar"
+            app:layout_constraintStart_toStartOf="@id/view_group_list_top_bar"
+            app:layout_constraintTop_toTopOf="@id/view_group_list_top_bar">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -49,22 +49,22 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:src="@drawable/ic_alarm"
-            app:layout_constraintBottom_toBottomOf="@id/group_top_bar"
-            app:layout_constraintEnd_toEndOf="@id/group_top_bar"
-            app:layout_constraintTop_toTopOf="@id/group_top_bar" />
+            app:layout_constraintBottom_toBottomOf="@id/view_group_list_top_bar"
+            app:layout_constraintEnd_toEndOf="@id/view_group_list_top_bar"
+            app:layout_constraintTop_toTopOf="@id/view_group_list_top_bar" />
 
         <include
-            android:id="@+id/group_filter"
+            android:id="@+id/include_group_list_filter"
             layout="@layout/include_group_filter_selector"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/group_top_bar" />
+            app:layout_constraintTop_toBottomOf="@id/view_group_list_top_bar" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/group_filter"
+            app:layout_constraintTop_toBottomOf="@id/include_group_list_filter"
             tools:listitem="@layout/item_group" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
