refactor: 한 줄 소개 길이 수정

--- a/android/app/src/main/res/layout/fragment_register_dog.xml
+++ b/android/app/src/main/res/layout/fragment_register_dog.xml
@@ -143,7 +143,6 @@
                 style="@style/Theme.AppCompat.TextView.Profile.EditText.Contents"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="12dp"
                 android:layout_weight="1"
                 android:background="@drawable/rect_gray03_fill_16"
@@ -151,7 +150,7 @@
                 android:maxLength="15"
                 android:maxLines="1"
                 android:text="@={vm.oneLiner}"
-                app:layout_constraintStart_toStartOf="@+id/tv_dog_name_title"
+                app:layout_constraintStart_toStartOf="@+id/tv_one_liner_title"
                 app:layout_constraintTop_toBottomOf="@+id/tv_one_liner_title" />
 
             <TextView
